fix typo in referee name

--- a/docs/report.tex
+++ b/docs/report.tex
@@ -55,7 +55,7 @@
     \and
     Referee CTS GARR: \\Claudio Grandi \\ \small claudio.grandi@bo.infn.it
     \and
-    Referee GARR: \\Francesco Lombardi \\ \small francesco.lombardi@garr.it
+    Referee GARR: \\Francesco Lombardo \\ \small francesco.lombardo@garr.it
 }
 
 %\date{\small Academic year}
