--- a/docs/report.tex
+++ b/docs/report.tex
@@ -265,13 +265,18 @@ per i quali, al momento,
 si fa affidamento su quelli \ac{JVM}
 (Android è in grado di importare ed eseguire software scritto per \ac{JVM}).
 
-\section{Prossimi obiettivi}\label{sec:prossimi-obiettivi}
+\subsection{Dissemination e Management [Task T9]}\label{subsec:dissemination-e-management-[task-t9]}
+Ci si è resi conto che il piano iniziale manca di un task di ``dissemination e management'' nel quale condurre tutte le \
+attività necessarie al progetto che non rientrano pienamente nei sotto task proposti.
+%
+È stato quindi inserito il task DISSEMINATION [task T9], la cui durata si estende per tutto il percorso del progetto.
 
-%completamento t1 t3
-%implementazione standard library in contrapposizione a quella di protelis -francia
-%ulteriori sviluppi di t4
-%allineamento debug-friendly
-%investigare integrazione con pulverization
+Il gruppo di ricerca ospitante ha organizzato un incontro ospitando il prof. Sven Tomforde dell'Università di Kiel,
+al quale è stato presentato \ck{} con l'obiettivo di avere feedback e discutere circa possibili casi di studio, aprendo la possibilità a collaborazioni future.
+%
+Questa attività rientra nelle attività del task T9
+
+\section{Prossimi obiettivi}\label{sec:prossimi-obiettivi}
 
 Come obiettivi per i prossimi tre mesi di lavoro, ovvero nella figura~\ref{fig:timeline} tra M6 e M7,
     si prevede di completare il task T1, ovvero la progettazione del \ac{dsl},
